--- a/ClientApp/src/css/radio.css
+++ b/ClientApp/src/css/radio.css
@@ -83,9 +83,7 @@ main .stationSearch {
     flex-direction: column;
     justify-content: center;
     align-items: center;    
-    border: 2px solid black;
-    border-radius: 8px;
-    padding: 15px;
+    
     min-width: 60%;
 }
 
@@ -94,6 +92,10 @@ main .stationSearch .searchControlsAdvanced {
     flex-direction: column;
     justify-content: center;
     width: 100%;
+    border: 2px solid black;
+    border-radius: 8px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 main .stationSearch .searchControlsAdvanced .searchControls .controlItem:nth-of-type(1) {flex-grow: 1;}
@@ -114,8 +116,8 @@ main .stationSearch .searchControlsAdvanced .searchControls div:nth-of-type(2) {
 
 main .stationSearch .searchControlsAdvanced .searchControls input {
     width: 80%;
-    height: 50px;
-    font-size: 20px;
+    height: 40px;
+    font-size: 22px;
 }
 
 main .stationSearch .searchControlsAdvanced .searchControls button {
