--- a/ClientApp/src/css/radio.css
+++ b/ClientApp/src/css/radio.css
@@ -16,6 +16,10 @@ body {
     /* overflow: scroll; */
 }
 
+.radioApp {
+    
+}
+
 header {
     display: flex;
     flex-direction: row;
@@ -71,6 +75,7 @@ main .playlist {
     flex-direction: column;
     width: 40vw;
     /* max-height: 30vh; */    
+    margin-bottom: 10px;
 }
 
 main .playlist .playlistHeader {
@@ -142,14 +147,14 @@ main .playlist .playlistStations .playlistStationItem .stationItemControls > * {
 }
 
 main .stationSearch {
-    position: fixed;
-    top: 40vh;
+    /* position: fixed;
+    top: 40vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;    
     z-index: 100;
-    min-width: 60%;
+    min-width: 60%;    
 }
 
 main .stationSearch .searchControlsAdvanced {
@@ -215,23 +220,43 @@ main .stationSearch .searchControlsAdvanced .searchAdvanced div > * {
 }
 
 main .stationSearch .searchResults {
-    
+    overflow: auto;    
 }
 
 main .stationSearch .searchResults .searchResultItem {
-    padding: 4px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* align-items: center; */
+    /* border-bottom: 1px solid black; */
+    margin-bottom: 6px;
 }
 
-main .stationSearch .searchResults .searchResultItem button {
-
+main .stationSearch .searchResults .searchResultItem:hover {
+    background-color: #dae6f0;
 }
 
-main .stationSearch .searchResults .searchResultItem > a {
+main .stationSearch .searchResults .searchResultItem .searchResultItemDescription {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    /* justify-content:flex-start; */
+    text-align: start;
+    width: 20vw;
+}
+
+main .stationSearch .searchResults .searchResultItem .searchResultItemDescription > a {
     font-size: 14px;
     color: black;
-    display: inline-block;
-    width: 20vw;
+    /* display: inline-block; */
+    /* width: 20vw; */
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+main .stationSearch .searchResults .searchResultItem .searchResultItemDescription p {
+    font-size: 10px;
+    text-align: left;
+    margin: 0;
 }
