bug fix, ui & css updates

--- a/ClientApp/src/css/radio.css
+++ b/ClientApp/src/css/radio.css
@@ -25,8 +25,12 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 12vh;
+    min-height: 12vh;
     background-image: linear-gradient(#e6e6e6, #f2f2f2, #ffffff);
+}
+
+header section {
+    padding-top: 4px;
 }
 
 header section .headerControls {
@@ -42,7 +46,7 @@ header section .stationImage {
     width: 50px;
     height: 50px;
     /* margin-right: 10px; */
-    border: 1px solid #e6e6e6;
+    /* border: 1px solid #e6e6e6; */
     margin-top: 4px;
 }
 
@@ -83,7 +87,7 @@ main .stream {
 main .playlist {
     display: flex;
     flex-direction: column;
-    width: 40vw;
+    width: 50vw;
     /* max-height: 30vh; */    
     margin-bottom: 10px;
 }
@@ -106,8 +110,11 @@ main .playlist .playlistStations {
     /* overflow-y: scroll; */
     padding-right: 4px;
     padding-left: 4px;
+    padding-top: 2px;
+    padding-bottom: 4px;
     border: 1px solid #e6e6e6;
     border-radius: 6px;
+    overflow-x: hidden;
     overflow-y: auto;
     max-height: 20vh;
 }
@@ -138,17 +145,25 @@ main .playlist .playlistStations .playlistStationItem * {
     min-width: 100%;
 } */
 
-main .playlist .playlistStations .playlistStationItem p {
-    min-width: 85%;
+main .playlist .playlistStations .playlistStationItem a {
+    /* min-width: 60%; */
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+main .playlist .playlistStations .playlistStationItem p {
+    /* min-width: 85%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; */
     margin-top: 4px;
     margin-bottom: 4px;
 }
 
 main .playlist .playlistStations .playlistStationItem .stationItemControls {
     min-width: 20px;
+    white-space: nowrap;
 }
 
 main .playlist .playlistStations .playlistStationItem .stationItemControls > * {
@@ -164,7 +179,7 @@ main .stationSearch {
     justify-content: center;
     align-items: center;    
     z-index: 100;
-    min-width: 60%;    
+    width: 60vw;
 }
 
 main .stationSearch .searchControlsAdvanced {
