--- a/ClientApp/src/css/radio.css
+++ b/ClientApp/src/css/radio.css
@@ -106,6 +106,11 @@ main .playlist .playlistHeader > * {
     margin-bottom: 4px;
 }
 
+main .playlist .playlistHeader div > * {
+    padding-left: 6px;
+    padding-right: 6px;
+}
+
 main .playlist .playlistStations {
     /* overflow-y: scroll; */
     padding-right: 4px;
