--- a/ClientApp/src/css/radio.css
+++ b/ClientApp/src/css/radio.css
@@ -270,7 +270,7 @@ main .stationSearch .searchResults .searchResultItem {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     /* border-bottom: 1px solid black; */
     margin-bottom: 6px;
 }
