--- a/ClientApp/src/css/animation.css
+++ b/ClientApp/src/css/animation.css
@@ -103,3 +103,16 @@
         opacity:0;
     }
 }
+
+.spin {
+    animation: spin 2s infinite linear;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(359deg);
+    }
+}
