--- a/ClientApp/src/components/navbar/controls/NavBarControls.module.css
+++ b/ClientApp/src/components/navbar/controls/NavBarControls.module.css
@@ -8,13 +8,14 @@
 .headerLeft {
     position: absolute;
     top: 15px;
-    left: 15px;
+    left: 20px;
     padding: 6px;
 }
 
 .stationImage {
     width: 50px;
     height: 50px;
+    object-fit: contain;
     transition: transform .2s;
 }
 
@@ -37,7 +38,7 @@
 .headerSourceLink {
     position: absolute;
     top: 20px;
-    right: 15px;
+    right: 20px;
     padding: 6px;
 }
 
